Added a Module Config option to change the default SSL key size, and increased the default to 1024 bits.
Added Module Config options for choosing different locations for servers' SSL certificate and key files.
The PHP module mcrypt is now only recommended when installing phpMyAdmin, but not strictly required.
Added a button on the Install Scripts for upgrading several to the latest version at once.
When SSL is enabled for a virtual server, all Apache directives are copied from the non-SSL virtualhost section. This ensures that directives added by plugins or PHP configuration are preserved.
Added an option to the Edit Virtual Server page to turn off disabling when the bandwidth limit is reached, or a per-domain basis. Also added corresponding --bw-disable and --bw-no-disable options to the modify-domain.pl command-line script.
If the system has a bonded interface but no ethernet, it will be detected as the primary interface.
The display of mailbox sizes is now off by default.
The configuration check process now ensures that the system is setup to use itself as a DNS server, so that newly created domains will resolve.
Added a regular check for ophan php-cgi processes left around by Apache restarts on some systems, and kill any found.
Added an option to the scheduled backup page to only send an email report when the backup fails, and an option to send email to domain owners as well.
When a virtual server with anonymous FTP is created, the ProFTPd user (typically ftp) is added to the domain's Unix group. This allows anonymous FTP to work even when the domain's home directory is not world-readable.
Added checkboxes to the mail log search form to exclude spam and viruses from the results.
Added a search box to the list of scripts, to more easily find the one you want in the current huge list.
Added a script installers for the Flyspray and Mantis issue trackers.