@@ -2532,6 +2532,9 @@ scripts_nonewer=Newer than latest
 scripts_rating=Your rating
 scripts_find=Find scripts matching:
 scripts_findok=Search
+scripts_needperlmod=Perl module $1 is required ..
+scripts_optperlmod=Perl module $1 is recommended ..
+scripts_eperlsoftware=.. Virtualmin cannot work which software package contains this Perl module
 
 newnotify_title=Email Server Owners
 newnotify_desc=This page can be used to send email to the owners of the selected virtual servers, for example to announce system down-time, upgrades or other service alterations. The following substitions can be used in the message body and subject:
